--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <button onclick="generateSpeech()">お話を聞く</button>
       <button onclick="appendSpeech()">続きを聞く</button>
       <button onclick="stopSpeech()">読み上げ停止</button>
+      <button onclick="downloadSpeech()">テキスト保存</button>
+      <button onclick="tweetSpeech()">Xに投稿</button>
     </div>
     <audio id="bgm" src="assets/se_cicadas.mp3" loop autoplay></audio>
   </div>
