--- a/index.html
+++ b/index.html
@@ -2,23 +2,47 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PTA会長スピーチジェネレーター</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="container">
+  <div id="container" style="max-width:700px; margin: auto; padding:20px;">
     <h1>🎤 PTA会長スピーチジェネレーター</h1>
-    <div id="speechArea">クリックで生成します…</div>
-    <div id="controls">
-      <button onclick="generateSpeech()">お話を聞く</button>
-      <button onclick="appendSpeech()">続きを聞く</button>
-      <button onclick="stopSpeech()">読み上げ停止</button>
-      <button onclick="downloadSpeech()">テキスト保存</button>
-      <button onclick="tweetSpeech()">Xに投稿</button>
+
+    <!-- テーマ選択 -->
+    <label for="themeSelect">テーマ選択：</label>
+    <select id="themeSelect" style="margin-bottom:10px;">
+      <option value="pta">PTA会長</option>
+      <option value="principal">校長先生</option>
+      <!-- 他テーマ追加可 -->
+    </select>
+
+    <!-- 生成テキスト表示 -->
+    <div id="speechArea" 
+         style="white-space: pre-wrap; border:1px solid #ccc; padding:10px; min-height:100px; margin-bottom:10px;">
+      クリックで生成します…
     </div>
+
+    <!-- 編集可能テキストエリア -->
+    <textarea id="editArea" rows="6" style="width:100%; margin-bottom:10px;" placeholder="ここで文章編集できます"></textarea>
+
+    <!-- 操作ボタン群 -->
+    <div id="controls" style="display:flex; flex-wrap: wrap; gap:10px;">
+      <button onclick="generateSpeech()">生成</button>
+      <button onclick="copyText()">コピー</button>
+      <button onclick="printText()">印刷</button>
+      <button onclick="saveImage()">画像化</button>
+      <button onclick="toggleAutoRead()">連続読み上げON/OFF</button>
+      <button onclick="tweetEdited()">Xに投稿</button>
+      <button onclick="stopSpeech()">読み上げ停止</button>
+    </div>
+
+    <!-- BGM（蝉の声） -->
     <audio id="bgm" src="assets/se_cicadas.mp3" loop autoplay></audio>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
