--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- BGM（蝉の声） -->
     <audio id="bgm" src="assets/se_cicadas.mp3" loop autoplay></audio>
   </div>
-
+<!-- html2canvas (画像化ライブラリ) -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script src="script.js"></script>
 </body>
